added middleware to verify user token
