# src/routes/userRoutes.js
@@ -1,10 +1,11 @@
 import express from "express";
 import userController from "../controllers/userController.js";
+import verifyToken from "../middleware/auth.middleware.js";
 const userRouter = express.Router();
 
 userRouter.get('/login', userController.logIn);
 userRouter.get('/', userController.getAllUsers);
-userRouter.get('/:id', userController.getUserById);
+userRouter.get('/:id', verifyToken, userController.getUserById);
 userRouter.post('/', userController.createUser);
 userRouter.put('/:id', userController.updateUser);
 userRouter.put('/:id/role', userController.updateUserRole);
