# swagger.json
@@ -5,9 +5,65 @@
     "version": "1.0.0",
     "description": "My API Description"
   },
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "security": {
+    "bearerAuth": []
+  },
   "paths": {
+    "/api/users/login": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Log user in",
+        "operationId": "login",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "required": true,
+            "description": "User name",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "required": true,
+            "description": "Password",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {
+                "example": [
+                  {
+                    "id": 1
+                  }
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Get all users",
         "operationId": "getAllUsers",
         "parameters": [
@@ -55,6 +111,12 @@
         }
       },
       "post": {
+        "tags": [
+          "Users"
+        ],
+        "security": {
+          "bearerAuth": []
+        },
         "summary": "Create a new user",
         "operationId": "createUser",
         "requestBody": {
@@ -89,6 +151,9 @@
     },
     "/api/users/{id}": {
       "get": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Get a specific user by ID",
         "operationId": "getUserById",
         "parameters": [
@@ -119,6 +184,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Update a specific user by ID",
         "operationId": "updateUser",
         "parameters": [
@@ -159,6 +227,9 @@
     },
     "/api/users/{id}/archive": {
       "put": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Soft delete a specific user by ID",
         "operationId": "getUserById",
         "parameters": [
@@ -191,6 +262,9 @@
     },
     "/api/users/{id}/delete": {
       "delete": {
+        "tags": [
+          "Users"
+        ],
         "summary": "Delete a specific user by ID",
         "operationId": "deleteUser",
         "parameters": [
